# python

./: .env.example  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yml  docker-compose.yml  install.sh  minimal_test.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-test.txt  requirements.txt  run_test.py  setup.cfg  setup.py  simple_test.py  src.txt
.github/workflows/: gh-pages.yml  tests.yml
campaigns/: customer_success.py  demo_generator.py  email_sequences.py  github_lead_mining.py
docs/: conf.py  index.md  requirements.txt
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
scripts/: deploy_kubernetes.sh  setup_infrastructure.sh
src/taskprovision/: main.py
src/taskprovision/api/: generation.py
src/taskprovision/config/: settings.py
src/taskprovision/core/: __init__.py  ai_analyzer.py  code_generator.py  code_generator_enhanced.py  quality_guard.py  task_manager.py
src/taskprovision/models/: task.py
src/taskprovision/services/: email_service.py  github_service.py  ollama_service.py  stripe_service.py
tests/: conftest.py  test_api.py  test_core.py  test_sanity.py  test_services.py
tests/unit/core/: test_ai_analyzer.py  test_task_manager.py
tools/: ai_suggestions.py  code_analyzer.py  repo_health_checker.py
